refactor: Refactored to use Paramixel 3.0.0 (#1453)
Signed-off-by: dhoard <doug.hoard@gmail.com>